@@ -6,7 +6,7 @@ from generictable import GenericTable
 
 class BillsTable(GenericTable):
     """ Table to hold information for all bills created. """
-    Version = 3
+    Version = 4
     Key = "Id"
     KeyAuto = True
     Name = "br_BillsTable"
@@ -16,7 +16,7 @@ class BillsTable(GenericTable):
             catId INTEGER,
             payee TEXT NOT NULL,
             dueDate INTEGER NOT NULL,
-            amountDue INTEGER NOT NULL,
+            amountDue INTEGER,
             notes TEXT,
             paid INTEGER DEFAULT 0,
             alarm INTEGER)
